tried to resolve the issues of give advice buttons' alignement

--- a/public/style.styl
+++ b/public/style.styl
@@ -337,12 +337,12 @@ section#apps
  font-style italic
 
 
-@media (max-width: 435)
+@media (max-width: 436)
   #giveAdviceButton
     margin-left 0px
     margin-top 10px
 
-@media (min-width: 435)
+@media (min-width: 437)
   #giveAdviceButton
     margin-left 10px
 
